Don't check TARGET_64BIT if TARGET_64BIT_DEFAULT is false

2012-03-31  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/52784
	* config/i386/i386.c (ix86_option_override_internal): Don't
	check TARGET_64BIT if TARGET_64BIT_DEFAULT is false.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@186049 138bc75d-0d04-0410-961f-82ee72b054a4